--- a/rest-graph/pom.xml
+++ b/rest-graph/pom.xml
@@ -62,6 +62,16 @@
       <version>${janusgraph.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.janusgraph</groupId>
+      <artifactId>janusgraph-berkeleyje</artifactId>
+      <version>${janusgraph.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.janusgraph</groupId>
+      <artifactId>janusgraph-lucene</artifactId>
+      <version>${janusgraph.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
